Dmitry_Burlyaev/14.KubernetesApplicationDeployment/src/rendered.yaml
rendered.yaml
---
# Source: jenkins/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: "ci-cd"
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: jnlp
      port: 50000
      targetPort: 50000
  selector:
    app: jenkins
---
# Source: jenkins/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: "ci-cd"
  labels:
    helm.sh/chart: jenkins-0.1.0
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jenkins
      app.kubernetes.io/instance: jenkins
  template:
    metadata:
      labels:
        helm.sh/chart: jenkins-0.1.0
        app.kubernetes.io/name: jenkins
        app.kubernetes.io/instance: jenkins
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: jenkins
      securityContext:
        {}
      containers:
        - name: jenkins
          securityContext:
            {}
          image: "jfrog.it-academy.by/public/jenkins-ci:burlyaev29"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: jnlp
              containerPort: 50000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http-port
          readinessProbe:
            httpGet:
              path: /
              port: http-port
          resources:
            limits:
              cpu: 3
              memory: 3Gi
            requests:
              cpu: 2
              memory: 2Gi
          volumeMounts:
            - mountPath: /var/jenkins_home/init.groovy.d/basic-security.groovy
              name: jenkins-auth-config
              subPath: basic-security.groovy
            - mountPath: /var/jenkins_home/casc_configs/jenkins.yaml
              name: jenkins-config-yaml
              subPath: jenkins.yaml
            - mountPath: /var/jenkins_home
              name: jenkins-config
      volumes:
        - configMap:
            name: basic-security
          name: jenkins-auth-config
        - configMap:
            name: jenkins-config
          name: jenkins-config-yaml
        - name: jenkins-config
          nfs:
            path: /mnt/IT-Academy/nfs-data/sa2-29-24/burlyaev/jenkins
            server: 192.168.37.105
---
# Source: jenkins/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  name: jenkins-jenkins  # Используем fullnameOverride или дефолтное имя
  name: jenkins
  namespace: ci-cd
  labels:
    helm.sh/chart: jenkins-0.1.0
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "jenkins.k8s-3.sa"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
---
# Source: jenkins/templates/configmap.yaml
# templates/configmap.yaml
---
# Source: jenkins/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "jenkins-test-connection"
  namespace: "ci-cd" # namespace from the release context
  labels:
    helm.sh/chart: jenkins-0.1.0
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['jenkins:8080']
  restartPolicy: Never
